--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,5 +10,5 @@ jobs:
         with:
           python-version: "3.10"
       - run: python -m pip install flask
-      - run: python ./test1/test.py
+      - run: python /test1/test.py
       #pip install -r requirements.txt
